[gd_scene load_steps=8 format=3 uid="uid://bwwhipiacpd5i"]

[ext_resource type="Texture2D" uid="uid://cuu6txe8t03ca" path="res://assets/images/terrain/rock_red.png" id="1_l8vlq"]
[ext_resource type="Script" path="res://scenes/shop/display_item.gd" id="1_m0dg3"]
[ext_resource type="Shader" path="res://assets/Shaders/Selection.gdshader" id="2_x37r2"]
[ext_resource type="Resource" uid="uid://cahweifimwr1m" path="res://resources/upgrades/length_upgrade_1.tres" id="4_fmtub"]
[ext_resource type="Texture2D" uid="uid://cfunkvigljhhv" path="res://assets/images/circlething.png" id="5_l3ggs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kt860"]
resource_local_to_scene = true
shader = ExtResource("2_x37r2")
shader_parameter/flashColor = Color(1, 1, 1, 1)
shader_parameter/HovState = 0.0
shader_parameter/outlineColHov = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n0op1"]
resource_local_to_scene = true
shader = ExtResource("2_x37r2")
shader_parameter/flashColor = Color(1, 1, 1, 1)
shader_parameter/HovState = 0.0
shader_parameter/outlineColHov = Color(0, 0, 0, 1)

[node name="DisplayItem" type="TextureButton"]
material = SubResource("ShaderMaterial_kt860")
custom_minimum_size = Vector2(100, 100)
offset_right = 100.0
offset_bottom = 100.0
texture_normal = ExtResource("1_l8vlq")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("1_m0dg3")
displayed_upgrade = ExtResource("4_fmtub")

[node name="Platform" type="Sprite2D" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_n0op1")
position = Vector2(49, 67)
scale = Vector2(0.183, 0.2)
texture = ExtResource("5_l3ggs")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 100.0
offset_right = 45.0
offset_bottom = 123.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]$Temp[/center]"
tab_size = 3

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
